--- a/webdev/test-site/index.html
+++ b/webdev/test-site/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>我的测试页面</title>
+        <title>测试页面</title>
         <link href="styles/style.css" rel="stylesheet">
         <link href="https://fonts.font.im/css?family=Kirang+Haerang" rel="stylesheet">
     </head>
     <body>
-    <h1>Mozilla酷毙了</h1>
+    <h1>Mozilla 棒极了</h1>
     <img src="images/firefox-icon.png" alt="一只盘旋在地球上的火狐">
 
     <p>Mozilla是一个全球社区，这里汇聚着拉例子五湖四海的</p>
