--- a/webdev/test-site/index.html
+++ b/webdev/test-site/index.html
@@ -10,7 +10,7 @@
     <h1>Mozilla 棒极了</h1>
     <img src="images/firefox-icon.png" alt="一只盘旋在地球上的火狐">
 
-    <p>Mozilla是一个全球社区，这里汇聚着拉例子五湖四海的</p>
+    <p>Mozilla是一个全球社区，这里汇聚着来自五湖四海的技术人员</p>
     <ul>
         <li>技术人员</li>
         <li>思考者</li>
